--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   width: 100vw;
   height: 1px;
   display: none;
-  background-color: rebeccapurple;
+  border: rebeccapurple solid 1px;
   position: absolute;
 }
 
@@ -165,9 +165,159 @@ body {
   pointer-events: none;
 }
 
-/* -- ---- -- ---- -- ---- -- SCROLLITELLING -- ---- -- ---- -- ---- -- */
+/* -- ---- -- ---- -- ---- -- WIKIPEDIA DEFINITION -- ---- -- ---- -- ---- -- */
+
+#wikidef {
+  font-family: whyte;
+  font-weight: normal;
+  color: #cbc9c3;
+  font-size: 2.6vw;
+  width: 74vw;
+  position: absolute;
+}
+
+#secondpage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.atxt {
+  overflow: hidden;
+  position: relative;
+  width: 74vw;
+}
+
+#atxt1 {
+  position: relative;
+  top: 5vw;
+}
+
+#atxt2 {
+  position: relative;
+  top: 5vw;
+}
+
+#atxt3 {
+  position: relative;
+  top: 5vw;
+}
+
+#atxt4 {
+  position: relative;
+  top: 5vw;
+}
+
+/* -- ---- -- ---- -- ---- -- PRASE 1 -- ---- -- ---- -- ---- -- */
+
+#phrase1 {
+  font-family: whyte;
+  font-weight: normal;
+  color: #cbc9c3;
+  font-size: 2.6vw;
+  width: 74vw;
+  position: absolute;
+}
+
+#thirdpage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#human {
+  position: relative;
+  top: 10vw;
+  width: 74vw;
+  text-align: center;
+  color: #cbc9c3;
+  z-index: 10;
+}
+
+.a1txt {
+  overflow: hidden;
+  position: absolute;
+  width: 74vw;
+  top: 0vh;
+  left: -3vw;
+}
+
+#a1txt1 {
+  position: relative;
+  top: 10vh;
+}
+
+.a2txt {
+  overflow: hidden;
+  position: absolute;
+  width: 74vw;
+  top: 0vh;
+  left: 15.65vw;
+}
+
+#a2txt1 {
+  position: relative;
+  top: 10vh;
+}
+
+.a3txt {
+  overflow: hidden;
+  position: absolute;
+  width: 74vw;
+  top: 0vh;
+  left: -0.74vw;
+}
+
+#a3txt1 {
+  position: relative;
+  top: 10vh;
+}
+
+.a4txt {
+  overflow: hidden;
+  position: absolute;
+  width: 74vw;
+  top: 0vh;
+  left: 0vw;
+  text-indent: 21.35vw;
+}
+
+#a4txt1 {
+  position: relative;
+  top: 20vh;
+}
+
+.a5txt {
+  overflow: hidden;
+  position: relative;
+  width: 74vw;
+  top: -5vh;
+  left: 0vw;
+}
+
+#a5txt1 {
+  position: relative;
+  top: 30vh;
+}
+
+/* -- ---- -- ---- -- ---- -- TRIGGERS -- ---- -- ---- -- ---- -- */
 
 #tshowbar {
   top: 0vh;
-  height: 100vh;
+  height: 50vh;
+}
+
+#tsecondpage {
+  top: 10vh;
+}
+
+#tthirdpage {
+  top: -90vh;
+}
+
+#snapper {
+  top: -200vh;
+  height: 300vh;
 }
